housing.css : correction suite à modification du nom du selecteur 'articleOpenedCollapse' par 'articleCollapse'

--- a/src/css/housing.css
+++ b/src/css/housing.css
@@ -75,11 +75,12 @@
 	width: 95%;
 	margin: auto;
 	display: grid;
+	align-items: start ;
 	grid-template-columns: repeat(2, 1fr);
 	gap: 30px;
 }
 
-.housingDetails .articleOpenedCollapse ,.articleClosedCollapse{ 
+.housingDetails .articleCollapse { 
 	width: 100%;
 	margin-top: 0px;
 }
